--- a/docs/main.tex
+++ b/docs/main.tex
@@ -3,18 +3,7 @@
 \input{toolchain/preamble}
 
 \begin{document}
-
-    % \newpagestyle{main}{
-    %     \sethead
-    %         [\thepage] % even-left
-    %         [Mirror Education (Teacher: Matias Silva)] % even-center
-    %         [] % even-right
-    %         {} % odd-left
-    %         {PID Robot Course} % odd-center
-    %         {\thepage} % odd-right
-    %     \setfoot{}{}{}
-    % }
-    \newpagestyle{main}[\small]{
+    \newpagestyle{main}[]{
     \setheadrule{.55pt}%
     \sethead{\colorbox{CornflowerBlue}{\thesection} \sectiontitle}
             {RISC-V CPU}
@@ -22,8 +11,13 @@
     \setfoot{}{\colorbox{black}{\color{white}{\thepage}}}{}
     }
     \pagestyle{main}
+    \title{Sections and Chapters}
+    \pagenumbering{roman}
+    \tableofcontents
     \pagenumbering{arabic}
 
     \input{sections/introduction}
+    \input{sections/motivation}
+    \input{sections/microarchitecture}
 
 \end{document}
