--- a/docs/sections/introduction.tex
+++ b/docs/sections/introduction.tex
@@ -1,14 +1,3 @@
 \section{Introduction}
 
-In this class, we covered the following items:
-
-\begin{itemize}[topsep=6pt]
-\item Motivation behind software resets
-\item How to execute a software reset on the MPU6050
-\item Interacting with the i2c hardware on the Pico
-\item Understand the bitwise shift operators
-\end{itemize}
-
-I'll briefly explain these again here to eliminate any doubt.
-
-\subsection{Why do we need software resets?}
+This document is meant both as a user guide and reference on the design decisions I made while designing this RISC-V CPU.
